fixed image spacing

--- a/style.css
+++ b/style.css
@@ -143,9 +143,42 @@ article p {
   display: grid;
 }
 
+.product-page-options ul {
+  list-style: none;
+  display: grid;
+}
+
+.product-page-options li {
+  display: grid;
+  justify-self: center;
+}
+
 .product-page-options img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border: 4px solid #0e353d;
+}
+
+.product-page-options button {
+  grid-row: 2;
+  grid-column: 1;
+}
+
+.product-page-options li:nth-child(1) {
   grid-row: 1;
   grid-column: 1;
-  width: 40%;
-  height: 40%;
+}
+
+.product-page-options li:nth-child(2) {
+  grid-row: 1;
+  grid-column: 2;
+}
+
+.product-page-options button {
+  justify-self: center;
+  align-self: center;
+  color: white;
+  background-color: #006321;
+  border-radius: 2px
 }
